tests/samples/subscription-with-bad-syntax.err
subscription-with-bad-syntax.flow:2:Syntax error. "subscribe *feed_name\n".
