tests/samples/subscription-with-bad-syntax.flow
flow subscriptions do
  subscribe feed_name
done
